# kegbot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.cursor/rules/: repo-context.mdc
docs/: dev-guide.md  roadmap.md  spec.md
